Fix certificate display on mobile

--- a/assets/app/styles/_core.less
+++ b/assets/app/styles/_core.less
@@ -881,6 +881,8 @@ a.disabled-link {
 }
 pre.clipped {
   display: inline-block;
+  margin-top: 10px;
+  max-width: 100%;
 }
 
 .k8s-label {
